docs/v4.0.2/_sources/gallery/extras/coupling_vs_NA.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/coupling_vs_NA.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_coupling_vs_NA.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_coupling_vs_NA.py:


Sphere: Coupling vs numerical aperture
======================================

.. GENERATED FROM PYTHON SOURCE LINES 5-63



.. image-sg:: /gallery/extras/images/sphx_glr_coupling_vs_NA_001.png
   :alt: coupling vs NA
   :srcset: /gallery/extras/images/sphx_glr_coupling_vs_NA_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    1.0161565882863277 dimensionless






|

.. code-block:: Python


    import numpy as np
    from PyMieSim.units import ureg
    from PyMieSim.material import SellmeierMaterial

    from PyMieSim import experiment
    from PyMieSim import single
    from PyMieSim.polarization import PolarizationState

    source = experiment.source_set.GaussianSet(
        wavelength=[500] * ureg.nanometer,
        polarization=experiment.polarization_set.PolarizationSet(angles=[0] * ureg.degree),
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2] * ureg.AU,
    )

    scatterer = experiment.scatterer_set.SphereSet(
        diameter=[500e-9] * ureg.meter,
        material=[SellmeierMaterial("BK7")],
        medium=[1] * ureg.RIU,
    )

    detector = experiment.detector_set.PhotodiodeSet(
        numerical_aperture=np.linspace(0.1, 1, 150) * ureg.AU,
        phi_offset=[0] * ureg.degree,
        gamma_offset=[0, 10] * ureg.degree,
        sampling=[2000]
    )

    setup = experiment.Setup(
        scatterer_set=scatterer,
        source_set=source,
        detector_set=detector
    )

    dataframe = setup.get("coupling", drop_unique_level=True)

    dataframe.plot(x="detector:NA")

    single_source = single.source.Gaussian(
        wavelength=950 * ureg.nanometer,
        polarization=PolarizationState(angle=0 * ureg.degree),
        optical_power=1e-3 * ureg.watt,
        numerical_aperture=0.2 * ureg.AU,
    )

    single_scatterer = single.scatterer.Sphere(
        diameter=500 * ureg.nanometer,
        material=1.5 * ureg.RIU,
        medium=1 * ureg.RIU,
    )

    setup = single.setup.Setup(
        source=single_source,
        scatterer=single_scatterer
    )

    print(setup.get("Qsca"))


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.298 seconds)


.. _sphx_glr_download_gallery_extras_coupling_vs_NA.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coupling_vs_NA.ipynb <coupling_vs_NA.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coupling_vs_NA.py <coupling_vs_NA.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coupling_vs_NA.zip <coupling_vs_NA.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
